# hop

./: .clang-format  .travis.yml  BlockStreamView.h  BlockStreamer.h  CMakeLists.txt  Cursor.h  DisplayableTraces.cpp  DisplayableTraces.h  Hop.h  LICENSE  Lod.cpp  Lod.h  Makefile  ModalWindow.cpp  ModalWindow.h  Mutex.h  Options.cpp  Options.h  Profiler.cpp  Profiler.h  ProfilerView.cpp  ProfilerView.h  README.md  RendererGL.cpp  RendererGL.h  SearchWindow.cpp  Server.cpp  Server.h  Stats.cpp  Stats.h  StringDb.cpp  StringDb.h  ThreadInfo.cpp  ThreadInfo.h  Timeline.cpp  Timeline.h  TimelineInfo.h  TimelineMessage.h  TimelineStats.cpp  TimelineStats.h  (+42 more)
cmake/: FindSDL2.cmake
common/: Array.h  BlockAllocator.cpp  BlockAllocator.h  Deque.h  HashSet.c  HashSet.h  Mutex.h  Profiler.cpp  Profiler.h  Server.cpp  Server.h  Startup.cpp  Startup.h  StringDb.cpp  StringDb.h  TimelineStats.cpp  TimelineStats.h  TimelineTrack.cpp  TimelineTrack.h  TraceData.cpp  TraceData.h  Utils.cpp  Utils.h
common/platform/: Platform.h  Platform_Unix.cpp  Platform_Windows.cpp
front_ends/: hopCLI.cpp  hopGUI.cpp
hop/: Cursor.cpp  Lod.cpp  Lod.h  ModalWindow.cpp  ModalWindow.h  Options.cpp  Options.h  ProfilerView.cpp  ProfilerView.h  Renderer.h  RendererGL.cpp  SearchWindow.cpp  SearchWindow.h  Snooper.cpp  Snooper.h  Stats.cpp  Stats.h  Timeline.cpp  Timeline.h  TimelineInfo.h  TimelineStatsView.cpp  TimelineStatsView.h  TimelineTracksView.cpp  TimelineTracksView.h  TraceStats.cpp  TraceStats.h  Viewer.cpp  Viewer.h  hopGUI.cpp  hop_icon_vect.inline
hop/renderer/: RendererGL.cpp  RendererMetal.mm
hopcli/: hopCLI.cpp
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui.ini  imgui_internal.h  stb_rect_pack.h
platform/: Platform.h  Platform_Unix.cpp  Platform_Windows.cpp
stats_window/: Cursor.cpp  Hop.h  Lod.h  ModalWindow.cpp  Options.cpp  RendererGL.cpp  Server.h  Timeline.cpp  TimelineStats.cpp  TimelineStats.h  TimelineTrack.cpp  TraceData.cpp  TraceData.h  Viewer.cpp  hop_icon_data.inline
test_client/: main_client.cpp
test_clients/: CMakeLists.txt  heavy_rec.cpp  lock_owner.cpp  stats_client.cpp
tests/: BlockAllocator_test.cpp  BlockStreamView_test.cpp  BlockStreamer_test.cpp  CMakeLists.txt  Deque_test.cpp  HashSet.c  HashSet_test.cpp  Pid_test.cpp  TestUtils.h  Tsc_test.cpp  c_test.c
thirdparties/imgui/: imconfig.h  imgui_internal.h
thirdparties/noc_file_dialog/: noc_file_dialog.h  noc_file_dialog.mm
wrap_library/: hop_wrap_linux.cpp  hop_wrap_macos.cpp  hop_wrap_unix.cpp  hop_wrap_windows.cpp
